[package]
name = "s_engine"
version = "0.1.0"
authors = ["peter"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "0.34.2"
gl = "0.14.0"
failure = "0.1"
image = "0.23.7"
cgmath = "0.17.0"
rodio = "0.11.0"
ipconfig = "0.2.2"